# boston-housing

./: .dockerignore  .gitignore  Dockerfile  README.es.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
app/: main.py  model_loader.py  schemas.py
mlruns/1/models/m-1abb89d5c8884743af8d88ada89ef7f9/artifacts/: MLmodel
mlruns/1/models/m-8505755149e14124a33c04c8d2a958d3/artifacts/: MLmodel  conda.yaml  python_env.yaml
mlruns/1/models/m-e4a61eea6d0e4cc7a50da02f1e6f7ad6/artifacts/: MLmodel
mlruns/1/models/m-f39852bd9dc4484eadb26e525380a446/artifacts/: MLmodel
models/: model.pkl.dvc  model_metadata.json
notebooks/: 01_eda_boston_housing.ipynb  02_model_explainability.ipynb
reports/: bias_report.md  bias_subgroup_metrics.csv  feature_importance.csv  permutation_importance.csv
src/: data.py  evaluate.py  explain.py  features.py  predict.py  train.py
tests/: test_api.py  test_training.py
